--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client \"",
+    "dev-test": "pm2 start server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
@@ -31,6 +32,7 @@
     "mongoose": "^5.9.17",
     "multer": "^1.4.2",
     "path": "^0.12.7",
+    "pm2": "^5.1.2",
     "request": "^2.88.2"
   }
 }
